# sand-markup

./: .gitignore  :  Cargo.toml  README.md  README.sand  flake.nix  rust-toolchain.toml  test.sand
.github/workflows/: ci.yml
lsp/: sandls.lua
queries/sand/: highlights.scm
src/: formatter.rs  lib.rs  lsp.rs  main.rs  parser.rs  sand.pest
tests/: main_integration_tests.rs
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-sand.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-sand.h
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_sand/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterSandTests/: TreeSitterSandTests.swift
tree-sitter/src/: grammar.json  node-types.json  parser.c
