[package]
name = "sand"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }

anyhow = "1.0.98"

clap = { version = "4.5.41", features = ["derive"] }

pest = "2.8.1"
pest_derive = "2.8.1"

tower-lsp = "0.20.0"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
